@@ -1,5 +1,14 @@
 2003-06-07  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* libpp/profile.h:
+	* libpp/profile.cpp: change API to walk through vma with non zero
+	samples count rather looking for all vma. This is not very clean, an
+	iterator interface will be perhaps a better idea. Measures shows it's
+	to do it so for now I apply it.
+	* libpp/profile_container.cpp: update according to above change.
+
+2003-06-07  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* libpp/profile_container.h:
 	* libpp/profile_container.cpp:
 	* libpp/symbol_container.h:
